[tool.poetry]
name = "audiotomd"
version = "0.1.0"
description = ""
authors = ["Asher Anjum <as.asher.anjum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audiotomd = "audiotomd:main"
